--- a/code/index.html
+++ b/code/index.html
@@ -7,27 +7,21 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
+  <!-- header  -->
   <header>
     <img class="logo" src="logo.png" alt="logo">
-    <h1>World Times</h1>
-    <nav>
-      <a href="#">LATEST NEWS</a>
-      <a href="#">SUBSCRIBE</a>
-      <a href="#">ACCOUNT</a>
-      <a href="#">SEARCH</a>
-    </nav>
-
-    <!-- Some kind of logo and navbar -->
+    <h1 class="heading">World Times</h1>
+    <a class="first-a" href="#">LATEST NEWS</a>
+    <a class="first-a" href="#">SUBSCRIBE</a>
+    <a class="second-a" href="#">ACCOUNT</a>
+    <a class="second-a" href="#">🔍 SEARCH</a>
   </header>
-
   <p class="date">Monday, January 20, 2020</p>
 
-  <!-- The big news content -->
-  <!--<section class="container">-->
+  <!-- The big news  -->
   <section class="big-news">
     <div>
       <img src="Brexit.jpg" alt="Placeholder big">
@@ -38,13 +32,11 @@
         in just a few
         weeks time. But how did we get to this stage and what is in the Brexit deal?
         Here is everything you need to know about the UK's departure, including what the deal means for UK citizens and
-        the changes to travel, investments and savings we can expect to see post-Brexit.
-      </p>
+        the changes to travel, investments and savings we can expect to see post-Brexit. </p>
     </div>
   </section>
-  <!--</section>-->
 
-  <!-- The other news  -->
+  <!-- opther-news  -->
   <section class="other-news">
     <a href="#">
       <img src="trump.jpg" alt="Placeholder-small">
@@ -81,11 +73,13 @@
       <p>After the Hurricane, the Battle Is Where, or Even Whether, to Rebuild</p>
     </a>
   </section>
+
+  <!-- The footer  -->
   <footer>
     <p>© 2020 World Times </p>
-    <nav>
-      <a href="#">Contact</a>
-      <a href="#">Advertisement</a>
+    <nav class="nav-footer">
+      <a href="#">CONTACT</a>
+      <a href="#">ADVERTISEMENT</a>
     </nav>
   </footer>
 </body>
