updated header and its styling

--- a/code/index.html
+++ b/code/index.html
@@ -22,6 +22,8 @@
       <a href="https://www.google.com/search?q=banana+news&rlz=1C1GCEU_svSE866SE866&oq=banana+ne&aqs=chrome.0.69i59j0j69i57j0l5.2752j0j8&sourceid=chrome&ie=UTF-8"
         target="_blank">More
       </a>
+      <img class="scnd-logo" src="scnd-banana-logo.svg" alt="Banana logo">
+      <a href="#">About</a>
       <a href="#bottom">Credit</a>
     </nav>
   </header>
