responsive tablet, started on navbar

--- a/code/index.html
+++ b/code/index.html
@@ -32,6 +32,10 @@
 
       <a class="link-desktop-navbar" href="" alt="link" target="_blank">News</a>  
       <a class="link-desktop-navbar" href="" alt="link" target="_blank">Sports</a>
+      <div class="site-name-tablet">
+      <img src="hiclipart.com.png" class="img-logo" alt="company-logo"> 
+      <h1>Techtrends</h1>
+      </div>
       <a class="link-desktop-navbar" href="" alt="link" target="_blank">Culture</a>
       <a class="link-desktop-navbar" href="" alt="link" target="_blank">Lifestyle</a>
 
