made a lot of overall changes

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
@@ -14,7 +15,7 @@
 
   <header class="header">
 
-    <img src="daily-news-logo.png" alt="Newspaper title">
+    <img src="images/daily-news-logo.png" alt="Newspaper title">
 
     <nav>
 
@@ -33,30 +34,52 @@
   <section class="big-news">
     <!-- The big news content -->
 
-    <img src="happyida.JPG" alt="Class image">
+    <img src="images/happyida.JPG" alt="Class image">
 
     <div>
       <h2>Ida has started Technigo!</h2>
 
       <p>
-        She is now taking new exciting steps into the tech community. Hoping to land a great job after
-        this journey. </p>
+        As one of 42 brave people she will tackle HTML, CSS, JavaScript and much more during
+        the next 24 weeks! "This is exciting times!" she says. <br>
+        She has joined team Giraffe. </p>
 
     </div>
 
   </section>
 
-  <section class="">
+  <section class="news-grid">
     <!-- The other news  -->
+
+    <article class="news-card">
+      <img src="images/giraffe vs ida.JPG" alt="picture of giraffe next to a picture of ida">
+      <h3>The Giraffe as a group</h3>
+      <!-- <p>A "group" of giraffes has been defined as "a collection of individuals that are -->
+      <!-- moving in the same general direction.</p> -->
+
+    </article>
+
+
+
+
+
+
+
+
+
+
+
 
   </section>
 
   <footer class="footer">
     <!-- Some info on the footer -->
 
-    <p>Made by IdaAbra, with knowledge gained from</p>
+    <p>Sponsored with knowledge by</p>
 
-    <img src="logo.svg" alt="Technigo logo">
+    <a href="https://www.technigo.io">
+      <img src="logo.svg" alt="Technigo logo" style="width:42px;height:42px;border:0;">
+    </a>
 
   </footer>
 
