--- a/code/index.html
+++ b/code/index.html
@@ -33,8 +33,8 @@
       alt="">
   </figure>
 
-  <article class="tiles">
-    <a class="tile" href="url">
+  <article class="big-news-container">
+    <a class="big-news-item" href="url">
       <img
         src="https://images.unsplash.com/photo-1568284439572-7194df6ece8a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2855&q=80">
       <div class="details">
