tablet layout responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -63,14 +63,35 @@
 
       
     <section class="other-news">
+      <div>
+        <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
+        <h3>Other news 1</h3>
+      </div>
+      <div>
+        <img class="img-other-news" src="photo-of-person-typing-on-computer-keyboard-735911.jpg" alt="typing on computer">
+        <h3>Other news 2</h3>
+      </div>
+      <div>
+      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
+      <h3>Other news 3</h3>
+      </div>
+      <div>
+      <img class="img-other-news" src="photo-of-person-typing-on-computer-keyboard-735911.jpg" alt="typing on computer">
+      <h3>Other news 4</h3>
+      </div>
+      <div>
+      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
+      <h3>Other news 5</h3>
+      </div>
+      <div>
+      <img class="img-other-news" src="photo-of-person-typing-on-computer-keyboard-735911.jpg" alt="typing on computer">
+      <h3>Other news 6</h3>
+      </div>
+      <div>
+      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
+      <h3>Other news 7</h3>
+      </div>
       
-      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
-      <img class="img-other-news" src="photo-of-person-typing-on-computer-keyboard-735911.jpg" alt="typing on computer">
-      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
-      <img class="img-other-news" src="photo-of-person-typing-on-computer-keyboard-735911.jpg" alt="typing on computer">
-      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
-      <img class="img-other-news" src="photo-of-person-typing-on-computer-keyboard-735911.jpg" alt="typing on computer">
-      <img class="img-other-news" src="blur-close-up-code-computer-546819.jpg" alt="picture of screen">
 
     </section>
     <footer>
