Change section and CSS

--- a/code/index.html
+++ b/code/index.html
@@ -31,14 +31,14 @@
 
 <!-- BIG NEWS HERE -->
   <section class="bignews-container">
-    <section class="container">
+    <article class="container">
     <img src="img/NS20_AboutPage_1000x563.jpg" alt="NAMM 2020">
       <div>
         <h2>NAMM 2020</h2>
         <p>The NAMM Show is the global crossroads of the music, sound and entertainment technology products industries, with more than 115,000 registrants from 130 countries.</p>
         <p>Uniting the Music, Sound and Entertainment Technology Communities.</p>
       </div>
-    </section>
+    </article>
   </section>
 
 <!-- ALL THE NEWS PARTS HERE -->
@@ -99,7 +99,6 @@
           <p>View demo:</p>
           <i class="fas fa-play-circle"></i>
         </a>
-        
 
         <a href="https://www.youtube.com/watch?v=df0PfXLv5Xs" target="_blank">
           <div>
@@ -159,8 +158,5 @@
       <a href="">GDPR consent</a>
     </div>
   </footer> 
-
-  
-  
 </body>
 </html>
