Trying to relink images and logos after changing some folders

--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
         <div class="navbar-all">
           <a href="#" class="navbar">Blog</a>
           <a href="#" class="navbar">Archive</a>
-          <a href="#"><img class="black-logo-top" src="/code/logo/black_logo.png" alt="Bläck logo"></a>
+          <a href="#"><img class="black-logo-top" src="./logo/black_logo.png" alt="Bläck logo"></a>
           <a href="#" class="navbar">Store</a>
           <a href="#" class="navbar">About</a>
           <a href="#main-menu" class="menu-toggle">
@@ -32,7 +32,7 @@
       <!-- The big news content -->
     <section class="big-news">
       <a href="#">
-        <img class="glacier-img" src="/code/pics/Articles-pics/glacier.jpeg" alt="Glacier">
+        <img class="glacier-img" src="./pics/Articles-pics/glacier.jpeg" alt="Glacier">
         <h1>Gardens of Branching Paths</h1>
         <h4>Photographer <span class="artist">Rhona-Lee Melendez</span> delights with her unique point of view.</h4>
       </a>
@@ -47,13 +47,13 @@
       <section class="portrett-sec">
         <!-- The other news  -->
         <a href="#" class="portrett">
-          <img src="/code/pics/portrett/neon_building.jpeg" alt="Neon building">
+          <img src="./pics/portrett/neon_building.jpeg" alt="Neon building">
           <h3>Feelgood House</h3>
           <h4>By Emily Sagett</h4>
         </a>
 
         <a href="#" class="portrett">
-          <img src="/code/pics/portrett/swan.jpeg" alt="Black swan">
+          <img src="./pics/portrett/swan.jpeg" alt="Black swan">
           <h3>Svanasöngur</h3>
           <h4>By Björk Herudóttir</h4>
         </a>
@@ -68,7 +68,7 @@
     <section class="most-read-all">
       <section>
         <a href="#" class="most-read">
-          <img src="/code/pics/Articles-pics/greenhouse.jpeg" alt="Greenhouse with plants">
+          <img src="./pics/Articles-pics/greenhouse.jpeg" alt="Greenhouse with plants">
           <h3>Meditating Greens</h3>
           <h4>By Maurice Hall</h4>
         </a>
@@ -76,7 +76,7 @@
 
       <section>
         <a href="#" class="most-read">
-          <img src="/code/pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
+          <img src="./pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
           <h3>Their Story Wrote Itself</h3>
           <h4>By Rebecca Gustavsson</h4>
         </a>
@@ -84,7 +84,7 @@
 
       <section>
         <a href="#" class="most-read">
-          <img src="/code/pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
+          <img src="./pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
           <h3>Friendship For A Lifetime</h3>
           <h4>By Eryk Stamp</h4>
         </a>
@@ -92,7 +92,7 @@
     
       <section>
         <a href="#" class="most-read">
-          <img src="/code/pics/Articles-pics/mural.jpeg" alt="Colorful mural">
+          <img src="./pics/Articles-pics/mural.jpeg" alt="Colorful mural">
           <h3>Casually Misbehaving</h3>
           <h4>By Belinda Laila Beech</h4>
         </a>
@@ -105,7 +105,7 @@
     <h2>Gallery</h2>
     <section>
       <a href="#" class="gallery-section">
-        <img src="/code/pics/gallery/grandi01.jpg" alt="Sunset reflecting in steel doors on a hut">
+        <img src="./pics/gallery/grandi01.jpg" alt="Sunset reflecting in steel doors on a hut">
           <div id="arrows">
             <i class="fas fa-arrow-left"></i>
             <i class="fas fa-arrow-right"></i>
@@ -123,7 +123,7 @@
     <section class="articles-all">
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/seals.jpeg" alt="Two seals">
+          <img src="./pics/Articles-pics/seals.jpeg" alt="Two seals">
           <h3>Seal Of Approval</h3>
           <h4>By Husna Bass</h4>
         </a>
@@ -131,7 +131,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/trudeau.jpeg" alt="Canadian Prime minister parttaking in Gay Pride">
+          <img src="./pics/Articles-pics/trudeau.jpeg" alt="Canadian Prime minister parttaking in Gay Pride">
           <h3>Best of Friends</h3>
           <h4>By Geoff Fields</h4>
         </a>
@@ -139,7 +139,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/word_cant_change_itself.jpeg" alt="Poster that reads: The World Won't Change Itself">
+          <img src="./pics/Articles-pics/word_cant_change_itself.jpeg" alt="Poster that reads: The World Won't Change Itself">
           <h3>What have we become?</h3>
           <h4>By Erin Herman</h4>
         </a>
@@ -147,7 +147,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/polar_bear.jpeg" alt="Polar Bear Underwater">
+          <img src="./pics/Articles-pics/polar_bear.jpeg" alt="Polar Bear Underwater">
           <h3>Know Your Climate Facts</h3>
           <h4>By Susan Shain</h4>
         </a>
@@ -155,7 +155,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/tunnel.jpeg" alt="Tunnel">
+          <img src="./pics/Articles-pics/tunnel.jpeg" alt="Tunnel">
           <h3>Dire Neighborhoods Galore</h3>
           <h4>By Dominic Copeland</h4>
         </a>
@@ -163,7 +163,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/horses.jpeg" alt="Horses">
+          <img src="./pics/Articles-pics/horses.jpeg" alt="Horses">
           <h3>Holding Tight to Tradition</h3>
           <h4>By Diya Monroe</h4>
         </a>
@@ -171,7 +171,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
+          <img src="./pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
           <h3>Friendship For A Lifetime</h3>
           <h4>By Eryk Stamp</h4>
         </a>
@@ -179,7 +179,7 @@
 
       <section>
         <a href="#" class="articles">
-          <img src="/code/pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
+          <img src="./pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
           <h3>Their Story Wrote Itself</h3>
           <h4>By Rebecca Gustavsson</h4>
         </a>
@@ -188,7 +188,7 @@
 
 <!-- Footer -->
     <section class="footer">
-      <a href="#"><img class="black-logo-bottom" src="/code/logo/black_logo.png" alt="Bläck logo"></a>
+      <a href="#"><img class="black-logo-bottom" src="./logo/black_logo.png" alt="Bläck logo"></a>
       <input type="button" class="subscription" value="Subscribe">
       <p>&copy; Copyright 2020 <br> Bläck Magazine</p>
     </section>
@@ -223,7 +223,7 @@
     </section>
 
     <div>
-      <img class="technigo-logo" src="/code/logo/logo.svg" alt="The Technigo Logo">
+      <img class="technigo-logo" src="./logo/logo.svg" alt="The Technigo Logo">
     </div>
 
   </body>
