--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,123 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Yantramanav&display=swap');
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Bungee&display=swap');
+  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-    <section class="">
+<body>
+  <header>
+    <nav>
+      <ul>
+
+        <li><a href="#">about</a></li>
+        <li><a href="#">events</a></li>
+        <li><a href="#">subscribe</a></li>
+        <li><a href="#">sign in</a></li>
+      </ul>
+    </nav>
+    <img src="/project-news-site/assets/ue_logo.png" alt="logo">
+  </header>
+
+
+  <section class="big-news">
+
+    <div class="poland">
+      <img src="/project-news-site/assets/poland.jpg" alt="poland image">
+      <div class="poland text">
+        <h2>Taking a look at Krakow</h2>
+        <a href="#"> <img class="hand" src="/project-news-site/assets/hand.png" alt=""></a>
+        <p class="desktop-text">
+          Lorem ipsum dolor amet hella aesthetic man braid leggings hexagon
+          hell of etsy chicharrones blog subway tile humblebrag. XOXO locavore
+          retro, pour-over shaman artisan man bun kombucha ugh humblebrag.
+          Tattooed art party vaporware kogi twee. Cloud bread humblebrag gochujang
+          schlitz cray neutra. Tumeric cloud bread small batch stumptown, flannel
+          freegan sustainable occupy skateboard craft beer. Disrupt aesthetic gentrify
+          you probably haven't heard of them quinoa woke.
+        </p>
+        <p class="mobile-text">Lorem ipsum dolor amet hella aesthetic man braid leggings hexagon
+          hell of etsy chicharrones blog subway tile humblebrag. XOXO locavore
+          retro, pour-over shaman artisan man bun kombucha ugh humblebrag.
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="container">
+    <section class="smaller-news">
       <!-- The other news  -->
+      <div class="thumbnails">
+
+        <div class="london">
+          <div class="overlay"></div>
+          <div>
+            <p>Shoreditch revisited</p>
+          </div>
+
+        </div>
+
+        <div class="artist">
+          <div class="overlay"></div>
+          <p>Meet the artist</p>
+        </div>
+
+        <div class="basketball">
+          <div class="overlay"></div>
+          <p>Including the community</p>
+        </div>
+
+        <div class="understated">
+          <div class="overlay"></div>
+          <p>Appreciating the understated</p>
+        </div>
+
+        <div class="portraits">
+          <div class="overlay"></div>
+          <p>Portraits around the world</p>
+        </div>
+
+        <div class="sculptures">
+          <div class="overlay"></div>
+          <p>Guerilla sculpting</p>
+        </div>
+
+
+        <div class="political small">
+          <div class="overlay"></div>
+          <p>Political Messages</p>
+        </div>
+
+
+        <div class="japan small">
+          <div class="overlay"></div>
+          <p>YOKOHAMA</p>
+        </div>
+
+
+        <div class="yarnbombing small">
+          <div class="overlay"></div>
+          <p>Yarnbombing!</p>
+        </div>
+
     </section>
-  </body>
+  </section>
+  <footer>
+    <div class="social-media">
+      <a href="facebook.com"><img src="/project-news-site/assets/facebook.png" alt="facebook logo" class="shrink"></a>
+      <a href="instagram.com"><img src="/project-news-site/assets/instagram.png" alt="instagram logo"></a>
+      <a href="twitter.com"><img src="/project-news-site/assets/twitter.png" alt="twitter logo"></a>
+      <a href="pintrest.com"><img src="/project-news-site/assets/pintrest.png" alt="pintrest logo" class="shrink"></a>
+    </div>
+  </footer>
+</body>
+
 </html>
