--- a/code/index.html
+++ b/code/index.html
@@ -34,17 +34,18 @@
   <section class="big-news">
     <!-- The big news content -->
 
-    <img src="images/happyida.JPG" alt="Class image">
+    <section>
 
-    <div>
+      <img src="images/happyida.JPG" alt="Class image">
+
       <h2>Ida has started Technigo!</h2>
 
       <p>
-        As one of 42 brave people she will tackle HTML, CSS, JavaScript and much more during
+        As one of 43 brave people she will tackle HTML, CSS, JavaScript and much more during
         the next 24 weeks! "This is exciting times!" she says. <br>
-        She has joined team Giraffe. </p>
+        She has happily joined team Giraffe. </p>
 
-    </div>
+    </section>
 
   </section>
 
@@ -52,13 +53,24 @@
     <!-- The other news  -->
 
     <article class="news-card">
-      <img src="images/giraffe vs ida.JPG" alt="picture of giraffe next to a picture of ida">
-      <h3>The Giraffe as a group</h3>
-      <!-- <p>A "group" of giraffes has been defined as "a collection of individuals that are -->
-      <!-- moving in the same general direction.</p> -->
-
+      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+      <h3>The Giraffe</h3>
     </article>
 
+    <article class="news-card">
+      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+      <h3>The Giraffe</h3>
+    </article>
+
+    <article class="news-card">
+      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+      <h3>The Giraffe</h3>
+    </article>
+
+    <article class="news-card">
+      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+      <h3>The Giraffe</h3>
+    </article>
 
 
 
