--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<a name="top"></a>
 
-    <section class="">
-      <!-- The other news  -->
+<body class="holygrail">
+  <section class="sticky">
+    <img class="header">
+
+    <img class="Title" src="Title.png" alt="Title" />
+
+    <!-- ************ HEADER ******************* -->
+    <!-- ************* NAV ***************** -->
+    <section class="flex-parent">
+      <div class="flex-child red"><a href="#" target="_blank">World</a></div>
+      <div class="flex-child yellow"><a href="#" target="_blank">Politics</a></div>
+      <div class="flex-child blue"><a href="#" target="_blank">U.S.</a></div>
+      <div class="flex-child green"><a href="#" target="_blank">N.Y.</a></div>
     </section>
-  </body>
+  </section>
+  </header>
+  <!-- *********** BLINKME TITLE *********** -->
+  <div class="blinkme">
+    <!-- <h1> THE BIG NEWS IS THAT FROM NOW ON THERE WILL <u>ONLY</u> BE GOOD NEWS!
+    </h1> -->
+  </div>
+  <!-- *********** MAIN ************** -->
+  <main class="HolyGrail-content">
+    <div class="grid-container">
+      <div class="grid-item"><img src="dirtyfamily.jpg" class="zoom" />
+        <h2>Family Cleans House, Finds Pet Tortoise Missing Since 1982</h2>
+      </div>
+      <div class="grid-item"><img src="23days.jpg">
+        <h2>Man surives 23 days in Alaskan wilderness</h2>
+      </div>
+      <div class="grid-item"><img src="1962.jpg">
+        <h2>In 1962 Hockey players from both teams stopped playing to find a lost contact lens</h2>
+      </div>
+    </div>
+    <!-- ********** SIDEBAR *********** -->
+
+    <aside class="HolyGrail-ads">
+      <div class="blinkme">
+        <h3>BUY NOW!</h3>
+      </div>
+      <img src="stolengoat.jpg" class="grid-items" />
+    </aside>
+  </main>
+  <!-- ************ FOOTER ************ -->
+  <section class="footer">
+    <!-- The other news  --> OTHER NEWS
+
+    <br /><a href="#top">Back to the top!</a>
+
+  </section>
+
+</body>
+
 </html>
