tried to fix the hero banner

--- a/code/index.html
+++ b/code/index.html
@@ -22,8 +22,7 @@
           <a href="#" class="navbar">Store</a>
           <a href="#" class="navbar">About</a>
           <a href="#main-menu" class="menu-toggle">
-            <span class="fa fa-bars"></span>
-          </a>
+            <span class="fa fa-bars"></span></a>
         </div>
       </nav>
     </header>
