I relinked my images so that netlify can find them

--- a/code/index.html
+++ b/code/index.html
@@ -25,17 +25,17 @@
         <li><a href="#">sign in</a></li>
       </ul>
     </nav>
-    <img src="/project-news-site/code/assets/ue_logo.png" alt="logo">
+    <img src="./assets/ue_logo.png" alt="logo">
   </header>
 
 
   <section class="big-news">
 
     <div class="poland">
-      <img src="/project-news-site/code/assets/poland.jpg" alt="poland image">
+      <img src="./assets/poland.jpg" alt="poland image">
       <div class="poland text">
         <h2>Taking a look at Krakow</h2>
-        <a href="#"> <img class="hand" src="/project-news-site/code/assets/hand.png" alt=""></a>
+        <a href="#"> <img class="hand" src="./assets/hand.png" alt=""></a>
         <p class="desktop-text">
           Lorem ipsum dolor amet hella aesthetic man braid leggings hexagon
           hell of etsy chicharrones blog subway tile humblebrag. XOXO locavore
@@ -112,12 +112,10 @@
   </section>
   <footer>
     <div class="social-media">
-      <a href="facebook.com"><img src="/project-news-site/code/assets/facebook.png" alt="facebook logo"
-          class="shrink"></a>
-      <a href="instagram.com"><img src="/project-news-site/code/assets/instagram.png" alt="instagram logo"></a>
-      <a href="twitter.com"><img src="/project-news-site/code/assets/twitter.png" alt="twitter logo"></a>
-      <a href="pintrest.com"><img src="/project-news-site/code/assets/pintrest.png" alt="pintrest logo"
-          class="shrink"></a>
+      <a href="facebook.com"><img src="./assets/facebook.png" alt="facebook logo" class="shrink"></a>
+      <a href="instagram.com"><img src="./assets/instagram.png" alt="instagram logo"></a>
+      <a href="twitter.com"><img src="./assets/twitter.png" alt="twitter logo"></a>
+      <a href="pintrest.com"><img src="./assets/pintrest.png" alt="pintrest logo" class="shrink"></a>
     </div>
   </footer>
 </body>
