what am i doing???

--- a/code/index.html
+++ b/code/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-
+  <a name="top"></a>
   <!-- Header -->
 
   <header class="header">
 
-    <img src="images/daily-news-logo.png" alt="Newspaper title">
+    <img src="images/goodnewspaper.JPG" alt="Newspaper title">
 
     <nav>
 
@@ -54,7 +54,8 @@
 
     <article class="news-card">
       <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-      <h3>The Giraffe</h3>
+      <h3>Stand up is a natural part of a developers day</h3>
+      <p>Giraffes spend most of their lives standing up</p>
     </article>
 
     <article class="news-card">
@@ -83,6 +84,7 @@
 
 
   </section>
+  <a href="#top" class="top"></a>
 
   <footer class="footer">
     <!-- Some info on the footer -->
