--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body>
+
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <nav>
+      <div class="nav 1">
+        <a href="link 1">About</a>
+      </div>
+      <div class="nav 2">
+        <a href="link 2">Explore</a>
+      </div>
+      <div class="nav 3">
+        <a href="link 3">Contact</a>
+      </div>
+    </nav>
+    <h1>Meow News</h1>
+    <img src="Images/logo.svg" alt="Technigo logo">
+  </header>
+
+  <!-- The big news content -->
+  <section class="big-news">
+
+    <img class="big-news-cat" src="Images/cat1.jpg" alt="Big-news-cat">
+    <div class="lazy-cat">
+      <h3>Which is the most lazy cat breed?</h3>
+      <h4>The Ragdoll, as its name suggests, is known to be a relaxed sort of cat
+        that just flops in its owner's arms. While these cats are not as 'floppy'
+        and doll-like as was originally believed, they are certainly not energetic.
+      </h4>
+      <h4>
+        They like to lie around, and their favourite 'activity' is probably being
+        picked up and petted by their owners. So if you want to a cat to relax with
+        after a hard day's work, the Ragdoll may be the breed for you.
+      </h4>
+    </div>
+  </section>
+
+  <!-- The other news  -->
+  <section class="other-news">
+
+    <div class="card 1">
+      <img src="Images/cat5.jpg" alt="pet-me">
+      <h4>Does owning a cat reduce stress?</h4>
+      <a class="read-more" href="read more">Read More</a>
+    </div>
+    <div class="card 2">
+      <img src="Images/cat2.jpg" alt="traveling-cat">
+      <h4>Does cats like to travel?</h4>
+      <a class="read-more" href="read more">Read More</a>
+    </div>
+    <div class="card 3">
+      <img src="Images/cat3.jpg" alt="stretching-cat">
+      <h4>Why do cats like to stretch?</h4>
+      <a class="read-more" href="read more">Read More</a>
+    </div>
+    <div class="card 4">
+      <img src="Images/cat4.jpg" alt="black-cat">
+      <h4>How far can a cat see in the dark?</h4>
+      <a class="read-more" href="read more">Read More</a>
+    </div>
+    <div class="card 5">
+      <img src="Images/cat6.jpg" alt="eyes-closed-cat">
+      <h4>Why do cats sleep all the time?</h4>
+      <a class="read-more" href="read more">Read More</a>
+    </div>
+    <div class="card 6">
+      <img src="Images/cat7.jpg" alt="close-up-cat">
+      <h4>Do cats have any feelings for their owners?</h4>
+      <a class="read-more" href="read more">Read More</a>
+    </div>
+
+  </section>
+
+  <footer>
+    <div class="publisher">
+      <h5>Publisher</h5>
+      <h5>Ingrid @TeamTigers2020</h5>
+    </div>
+    <div class="social-media">
+      <img src="Images/facebook-logo.jpg" alt="facebook-icon">
+      <img src="Images/black-instagram-logo.png" alt="instagram-icon">
+    </div>
+  </footer>
+
+</body>
+
 </html>
